@@ -1,4 +1,5 @@
 HEAD
+	+ Added autodiscovery of server parameters
 	+ Added noMultipleOUSupportComponent support
 	+ Conflict with zentyal-zarafa to avoid problems with libmapi.so
 3.2.7
